src/objects/Penal_Code__c.object
<CustomObject>
    <fields>
        <fullName>Calc_Class__c</fullName>
        <formula>CASE( Class__c , 
&quot;A&quot;, 900000, 
&quot;B&quot;, 800000,
&quot;C&quot;, 700000,
&quot;D&quot;, 600000,
&quot;E&quot;, 500000,
&quot;F&quot;, 400000,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc_Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calc_Level__c</fullName>
        <formula>CASE( Level__c , &quot;V&quot;, 1000000, &quot;M&quot;, 2000000,&quot;F&quot;,3000000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc_Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calc_Violent__c</fullName>
        <formula>IF( Violent__c , 10000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc_Violent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this charge is drug related, please check off this box</inlineHelpText>
        <label>Drug Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Numeric_Charge_Value__c</fullName>
        <inlineHelpText>Please enter the numeric portion of the charge value. Ex. &quot;VTL 1192-1&quot; would equal 1192.1   You can enter up to three decimal places.</inlineHelpText>
        <label>Numeric Charge Value</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SRP_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Charge will exclude participation in SRP. Ideally this would be called &quot;Programs Excluded&quot; and be a multipick list.</description>
        <label>SRP Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_Charge_Calculation__c</fullName>
        <formula>Calc_Level__c +  Calc_Class__c  +  Numeric_Charge_Value__c +  Calc_Violent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the calculated value used in determining Top Charge</inlineHelpText>
        <label>Top Charge Calculation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Violent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is a violent charge, please check off this box</inlineHelpText>
        <label>Violent</label>
        <type>Checkbox</type>
    </fields>
    <label>Penal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Level__c</columns>
        <columns>Class__c</columns>
        <columns>Degree__c</columns>
        <columns>Numeric_Charge_Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Violent__c</columns>
        <columns>Drug_Related__c</columns>
        <columns>Top_Charge_Calculation__c</columns>
        <columns>Calc_Violent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Violent_Offenses</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Level__c</columns>
        <columns>Class__c</columns>
        <columns>Degree__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Violent__c</columns>
        <columns>Drug_Related__c</columns>
        <columns>Top_Charge_Calculation__c</columns>
        <columns>Calc_Violent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Violent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Violent Offenses</label>
    </listViews>
    <listViews>
        <fullName>range</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Level__c</columns>
        <columns>Class__c</columns>
        <columns>Degree__c</columns>
        <columns>Violent__c</columns>
        <columns>Drug_Related__c</columns>
        <columns>Top_Charge_Calculation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>greaterThan</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>lessOrEqual</operation>
            <value>V</value>
        </filters>
        <label>range</label>
    </listViews>
    <nameField>
        <label>Charge Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Penal Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>